added logic for top N liked problems